// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`language/analyze-plain-text-sentiment/ibm-cloud-natural-language-understanding AnalyzePlainTextSentiment when all inputs are correct should return negative sentiment 1`] = `
Ok {
  "value": Object {
    "score": -0.924742,
    "sentiment": "negative",
  },
}
`;

exports[`language/analyze-plain-text-sentiment/ibm-cloud-natural-language-understanding AnalyzePlainTextSentiment when all inputs are correct should return neutral sentiment 1`] = `
Ok {
  "value": Object {
    "score": 0,
    "sentiment": "neutral",
  },
}
`;

exports[`language/analyze-plain-text-sentiment/ibm-cloud-natural-language-understanding AnalyzePlainTextSentiment when all inputs are correct should return positive sentiment 1`] = `
Ok {
  "value": Object {
    "score": 0.956482,
    "sentiment": "positive",
  },
}
`;

exports[`language/analyze-plain-text-sentiment/ibm-cloud-natural-language-understanding AnalyzePlainTextSentiment when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Bad request\\",
  \\"detail\\": \\"invalid request: content is empty\\"
}
AST Path: definitions[0].statements[2].responseHandlers[1].statements[0]
Original Map Location: Line 30, column 8",
}
`;
